--- a/CV/index.html
+++ b/CV/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tom Leprêtre - CV en ligne</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Css/Style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Aclonica&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -22,19 +23,22 @@
         </div>
 
         <div class="ligne-menu ligne-menu2">
-            <a href="#">Compétences</a>
+            <a href="#">Cursus</a>
         </div>
 
         <div class="ligne-menu ligne-menu3">
-            <a href="#">Diplômes</a>
+            <a href="#">Expériences Pro</a>
         </div>
 
         <div class="ligne-menu ligne-menu4">
-            <a href="#">Expériences Pro</a>
+            <a href="#">Compétences</a>
         </div>
 
         <div class="ligne-menu ligne-menu5">
             <a href="#">Loisir</a>
+        </div>
+        <div class="ligne-menu ligne-menu6">
+            <a href="#">Contact</a>
         </div>
 
     </div>
@@ -42,19 +46,39 @@
     <!-- Slide Parallax  -->
 
     <div id="slide1">
-        <div class="slide_inside"><img id ="PDP" src="Images/moi" alt="Logotest"></div>
-    </div>
-    <div id="slide2">
         <div class="slide_inside">
+            <img id ="PDP" src="Images/moi" alt="Logotest">
+            <h1>Tom Leprêtre</h1>
+            <h2>Developpeur d'Applications fullstack</h2>
         </div>
     </div>
+    
+    <div id="slide2">
+            <h2>Présentation</h2>
+            <div id="hrs2"></div>
+            <div class="pave_presentation">
+                <p>
+                    Je me nomme Tom, je suis un jeune codeur fullstack de 22 ans avec de grosses affinités sur le developpement back-end.
+                    Ayant toujours été passionné d'informatique, je me suis lancé corps et âme dans le metier début 2019 où j'ai appris mes premières méthodes de codage.
+                </p>
+                <p>
+                    Diplomé de l'Afpa en temps que développeur web, mon ambition est plus lointaine : devenir concepteur.
+                    A l'aide de mon expérience dans le commerce, j'ai développé plusieurs compétences liées à la vente qui pourrait être utile au cours de mon cursus.
+                </p>
+                <p>
+                    Au cours de mes études supérieures, j'ai pu notamment faire les deux premières années de la License de droits, période importante dans le façonnement de la personne que je aujourd'hui.
+                    Aimant autant l'autonomie que le travail d'équipe, je prend beaucoup de plaisir à travailler seul ainsi qu'avec mes collégues, passioné par le métier les heures ne sont plus comptés lorsqu'il s'agit de faire ce que l'on aime.
+                </p>
+            </div>
+    </div>
+
     <div id="slide3">
         <div class="slide_inside"></div>
     </div>
 
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-    <script src="Script.js"></script>
+    <script src="Js/Script.js"></script>
     
 </body>
 </html>
