--- a/CV/index.html
+++ b/CV/index.html
@@ -35,10 +35,10 @@
         </div>
 
         <div class="ligne-menu ligne-menu5">
-            <a href="#">Loisir</a>
+            <a id="Menu6" href="#slide6">Loisir</a>
         </div>
         <div class="ligne-menu ligne-menu6">
-            <a href="#">Contact</a>
+            <a id="Menu7" href="#">Contact</a>
         </div>
 
     </div>
@@ -48,7 +48,7 @@
     <div id="slide1">
             <h1 class="Nom">Tom Leprêtre</h1>
             <h2 class="Titre">Developpeur d'Applications fullstack</h2>
-            <div class="imgPDP"><img class ="PDP" src="Images/moi" alt="Logotest"></div>
+            <div class="imgPDP"><img class ="PDP" src="Images/moi.jpg" alt="Logotest"></div>
     </div>
     
     <div id="slide2">
@@ -74,7 +74,7 @@
     <div id="slide3">
         <div class="h2-cursus">
             <h2>Cursus</h2>
-            <div id="hrs3"></div>
+            <div class="hrs3"></div>
         </div>
         <div class="timeline-cursus">
             <div class="box-timeline">
@@ -176,7 +176,7 @@
     <div id="slide4">       
         <div class="h2-cursus">
             <h2>Expériences Profesionnelles</h2>
-            <div id="hrs3"></div>
+            <div class="hrs3"></div>
         </div>
         <div class="timeline-cursus">
             <div class="box-timeline-Exp-Pro">
@@ -189,7 +189,7 @@
         
                 <div class="boxmagic box b1 b1-Exp-Pro" data-anim="6">
                     <div class="titrebox">
-                        <h3>Developpeur Back End</h3>
+                        <h3>Developpeur Back End (Stage)</h3>
                         <h3>TheRed Games</h3>
                     </div>
                     <div class="backgroundb1-Exp-Pro"></div>
@@ -244,11 +244,82 @@
     </div>
 
     <div id="slide5">
-        <div class="h2-cursus">
+        <div class="h5-comp">
             <h2>Compétences</h2>
-            <div id="hrs3"></div>
+            <div class="hrs3"></div>
         </div>
-        <div class="timeline-cursus">
+        <div class="progressbar-back"></div>
+        <div class="progressbar-comp">
+            <div class="progressbar" data-perc="100">
+                <h3>Gestion Discord</h3>
+                <div class="bar bar1"><span></span></div>
+                <div class="label"><span></span>100%</div>
+            </div>
+            <div class="progressbar" data-perc="90">
+                <h3>SQL</h3>
+                <div class="bar bar01 color1"><span></span></div>
+                <div class="label"><span></span>90%</div>
+            </div>
+            <div class="progressbar" data-perc="90">
+                <h3>HTML</h3>
+                <div class="bar color1 bar01"><span></span></div>
+                <div class="label"><span></span>90%</div>
+            </div>
+            <div class="progressbar" data-perc="80">
+                <h3>CSS</h3>
+                <div class="bar color4 bar2"><span></span></div>
+                <div class="label"><span></span>80%</div>
+            </div>
+            <div class="progressbar" data-perc="80">
+                <h3>PHP</h3>
+                <div class="bar color4 bar02"><span></span></div>
+                <div class="label"><span></span>75%</div>
+            </div>
+            <div class="progressbar" data-perc="75">
+                <h3>JavaScript</h3>
+                <div class="bar color4 bar02"><span></span></div>
+                <div class="label"><span></span>75%</div>
+            </div>
+            <div class="progressbar" data-perc="70">
+                <h3>Java</h3>
+                <div class="bar color2 bar4"><span></span></div>
+                <div class="label"><span></span>70%</div>
+            </div>
+        </div>
+    </div>
+
+    <div id="slide6">
+        <div class="h6-loisir">
+            <h2>Loisirs</h2>
+            <div class="hrs3"></div>
+        </div>
+        <div class="loisir-cont">
+            <div class="loisir no1">
+                <img src="images/loisir_musique.jpg" alt="logo musique">
+                <h4>Musique</h4>
+                <p>Batterie & Piano</p>
+            </div>
+            <div class="loisir no2">
+                <img src="images/LoL_loisir.png" alt="logo League of Legends">
+                <h4>League of Legends</h4>
+                <p>Loisir & Compétitions</p>
+            </div>
+            <div class="loisir no3">
+                <img src="images/montage_loisir.jpg" alt="logo montage video">
+                <h4>Montage Vidéo</h4>
+                <p>Montage et Post-Production</p>
+            </div>
+            <div class="loisir no4">
+                <img src="images/techno_loisir.jpg" alt="logo technologie">
+                <h4>Technologie</h4>
+                <p>Veille technologique et numérique</p>
+            </div>
+            <div class="loisir no5">
+                <img src="images/netflix_loisir.png" alt="logo netflix">
+                <h4>Film&Series</h4>
+                <p>Anime, manga, series et films en tout genre</p>
+            </div>
+            <div class="loisir no6"></div>
         </div>
     </div>
 
